#53 Fixed spacing and text color defects in donate home page

--- a/core/static/css/v2/pages/donate.less
+++ b/core/static/css/v2/pages/donate.less
@@ -17,7 +17,7 @@
     }
 
     .subtitle {
-      color: @bg-red-transparant;
+      color: @link-primary;
       font-size: 18px;
       padding-bottom: 35px;
     }
@@ -31,7 +31,7 @@
       color: @link-primary;
       font-weight: bold;
       border-top: @grey solid 1px;
-      padding-top: 15px;
+      padding-top: 30px;
     }
 
     .grey-text {
@@ -43,9 +43,10 @@
       span {
         display: inline-block;
         padding-right: 15px;
+        color: @darker-grey;
         .fa {
           padding: 5px 10px 5px 0px;
-
+          color: @bg-dark;
         }
       }
     }
@@ -54,12 +55,12 @@
       .cost-label {
         line-height: 18px;
         padding-top: 15px;
-        color: @dark-grey;
+        color: @darker-grey;
         .font-size(16);
         font-weight: bold;
       }
       .cost {
-        color: @dark-grey;
+        color: @darker-grey;
         .font-size(22);
         font-weight: bold;
       }
@@ -110,6 +111,7 @@
     .sub-header {
       padding-top: 10px;
       font-weight: bold;
+      color: @darker-grey;
     }
 
     button {
